# ESP32-LLL

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/esp_lcd_nv3041/: CMakeLists.txt  esp_lcd_nv3041.c  idf_component.yml
components/esp_lcd_nv3041/include/: esp_lcd_nv3041.h
main/: CMakeLists.txt  app_audio.c  app_audio.h  app_display.c  app_display.h  app_gpio.c  app_gpio.h  app_runtime.c  app_runtime.h  app_tasks.h  app_tcp.c  app_tcp.h  app_wifi.c  app_wifi.h  idf_component.yml  main.c  tcp_client_v4.c
