idf_component_register(
    SRCS
        "main.c"
        "app_audio.c"
        "app_display.c"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        driver
        esp_common
        esp_lvgl_port
        freertos
        heap
        log
        nvs_flash
        esp_lcd
        esp_lcd_gc9a01
        lvgl
        esp_ringbuf
    REQUIRES esp_driver_i2s
)
